# ebpf-demo

./: CMakeLists.txt
ebpf_btf_raw_tracepoint/: main  main.bpf.c  main.skel.h
ebpf_raw_tracepoint/: main  main.bpf.c  main.c  main.skel.h
ebpf_tracepoint/: main  main.bpf.c  main.c  main.skel.h  vmlinux.h
ebpf_tracing_fentry/: main  main.bpf.c  main.skel.h
ebpf_tracing_uprobe/: main  main.bpf.c  main.skel.h
ebpf_uprobe/: Makefile  main.c
fprobe-demo/: main.c
kprobe-demo/: .Module.symvers.cmd  .main.ko.cmd  .main.mod.cmd  .main.mod.o.cmd  .main.o.cmd  .modules.order.cmd  Makefile  README.md  main.c  main.ko  main.mod  main.mod.c
kprobe-query-demo/: .Module.symvers.cmd  .main.ko.cmd  .main.mod.cmd  .main.mod.o.cmd  .main.o.cmd  .main.o.d  .modules.order.cmd  main.c  main.ko  main.mod.c  modules.order
tracepoint-demo/: main.c
uprobe-demo/: .Module.symvers.cmd  .main.ko.cmd  .main.mod.cmd  .main.mod.o.cmd  .main.o.cmd  .modules.order.cmd  main.c  main.ko  main.mod  main.mod.c
